--- a/javascript/goit-js-hw-07/style/main.css
+++ b/javascript/goit-js-hw-07/style/main.css
@@ -1,30 +1,56 @@
 .container {
-    padding: 30px 0;
-    text-align: center;
-    text-align: -webkit-center;
-}
-input {
-    font-size: 18px;
-    color: #000;
-    background: #fff;
-    padding: 0.7em 1.5em;
-    margin-bottom: 1em;
-    margin-top: 2em;
-    border: 1px solid gray;
-}
-input:hover {
-    background: #000;
-    color: #fff;
-}
-#gallery {
-    display: flex;
-    justify-content: space-between;
-    list-style: none;
-    padding: 0;
+	padding: 30px 0;
+	text-align: center;
+	text-align: -webkit-center;
 }
 
-.image-item {
+input {
+	display: block;
+	margin: 0 auto;
+	font-size: 18px;
+	color: #000;
+	background: #fff;
+	padding: 0.7em 1.5em;
+	margin-bottom: 1em;
+	margin-top: 2em;
+	border: 1px solid gray;
 }
+
+.headline {
+	display: block;
+	margin: 1.5em;
+	font-size: 25px;
+	font-weight: 700;
+}
+
+input:hover {
+	background: #000;
+	color: #fff;
+}
+#gallery {
+	display: flex;
+	justify-content: space-between;
+	list-style: none;
+	padding: 0;
+}
+
 .image-gallery {
-    height: 200px;
+	height: 200px;
+}
+
+#counter {
+	margin-bottom: 40px;
+	margin-top: 20px;
+}
+
+#validation-input {
+	border: 3px solid #bdbdbd;
+}
+
+#validation-input.valid {
+	border-color: #4caf50;
+}
+
+#validation-input.invalid {
+	border-color: #f44336;
 }
