--- a/javascript/goit-js-hw-07/style/main.css
+++ b/javascript/goit-js-hw-07/style/main.css
@@ -29,7 +29,8 @@ input:hover {
 }
 #gallery {
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-around;
+	flex-wrap: wrap;
 	list-style: none;
 	padding: 0;
 }
