--- a/javascript/goit-js-hw-08/css/styles.css
+++ b/javascript/goit-js-hw-08/css/styles.css
@@ -47,7 +47,12 @@ body {
 	height: 100%;
 	width: 100%;
 	object-fit: cover;
-	transition: transform 200ms ease-in-out;
+	opacity: 0;
+	transition: transform 200ms ease-in-out, opacity 300ms ease-in-out;
+}
+
+.gallery__image.fade-in {
+	opacity: 1;
 }
 
 .gallery__link {
