--- a/Additional tasks/module-7/task-1/style.css
+++ b/Additional tasks/module-7/task-1/style.css
@@ -1,14 +1,22 @@
 #pool {
-    position: relative;
-    width: 600px;
-    height: 300px;
-    background-color: teal;
+	position: relative;
+	width: 600px;
+	height: 300px;
+	background-color: lightblue;
+	border: 1px solid black;
+	cursor: crosshair;
+	text-align: center;
+	font-size: 25px;
+	font-weight: 800;
+	color: gray;
 }
 #person {
-    position: absolute;
-    text-align: center;
-    font-size: 10px;
-    width: 50px;
-    height: 50px;
-    background-color: green;
+	position: absolute;
+	text-align: start;
+	font-size: 14px;
+	width: 100px;
+	height: 30px;
+	background-color: rgb(255, 255, 255);
+	border: 1px solid black;
+	padding: 5px;
 }
