--- a/javascript/goit-js-hw-11/syle.css
+++ b/javascript/goit-js-hw-11/syle.css
@@ -23,3 +23,9 @@ button:hover {
 	background-color: #e7e7e7;
 	color: black;
 }
+
+.field {
+	display: inline-block;
+	margin: 30px 0;
+	font-size: 35px;
+}
