--- a/javascript/goit-js-hw-11/syle.css
+++ b/javascript/goit-js-hw-11/syle.css
@@ -45,6 +45,9 @@ button:hover {
 	font-family: "Roboto", sans-serif;
 	font-size: 50px;
 	color: beige;
+	text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1),
+		0px 18px 23px rgba(0, 0, 0, 0.1);
+	/* text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.3); */
 }
 
 .label {
